Fri Sep 17 23:17:46 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* lib/fairy/main/*: REQ251対応完了

Fri Sep 17 22:12:04 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* lib/fairy/fairy.rb, lib/fairy/app/*: REQ251対応完了

Fri Sep 17 22:06:35 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bin/fairy{-cat,cp,rm}: REQ251対応完了

Fri Sep 17 21:45:07 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bin/{master,...}をlib/fairy/app以下に移動
	* lib/{master.rb,..}をlib/fairy/main以下に移動

Fri Sep 17 21:33:56 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* node/port*.rb を share以下へ移動

Fri Sep 17 21:31:05 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy/node以下ファイル名改名(その3)

Fri Sep 17 21:27:49 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy/node以下ファイル名改名(その2)

Fri Sep 17 21:24:42 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy/node以下ファイル名改名(その1)

Fri Sep 17 21:20:02 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy/client以下ファイル名改名(その4)

Fri Sep 17 21:16:23 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy/master以下ファイル名改名(その4)

Fri Sep 17 21:15:26 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy/master以下ファイル名改名(その3)

Fri Sep 17 21:09:49 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy/master以下ファイル名改名(その2)

Fri Sep 17 16:32:29 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy/client/join.rb -> seg-join.rb

Fri Sep 17 16:29:43 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy/client以下ファイル名改名

Wed Sep 15 15:56:26 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* wc.rb, nwc.rb: BUG#248対応

Sat Sep 11 01:06:24 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* sort.rb, b-sort.rb, n-sort.rb, conf.rb: 新sort対応(REQ#247)
	* sort18.rb, sort19.rb: 新sortのために改名
	* n-mod-group-by.rb: DirectOnMemoryBufferでsortした結果をeachする
	  ようにした.
Fri Sep  3 16:40:39 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-group-by.rb, n-mod-group-by.rb: REQ#246対応

Wed Sep  1 18:12:57 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
