@@ -1,8 +1,11 @@
 # encoding: UTF-8
+#
+# Copyright (C) 2007-2010 Rakuten, Inc.
+#
 
 require "uri"
 
-require "fairy/backend/binput"
+require "fairy/master/binput"
 require "fairy/share/vfile"
 require "fairy/share/file-place"
 
